# onnx-server-openenclave

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AKS-Deployment.md  AKS-TLS-LetsEncrypt.md  CMakeLists.txt  CONTRIBUTING.md  DEVELOPMENT.md  README.md  azure-pipelines.yml  build.sh  debug.pub.pem  enclave.conf
cgmanifests/: cgmanifest.json
cgmanifests/submodules/: cgmanifest.json  generate_submodule_cgmanifest.py
cmake/: get_boost.cmake  oeedl_file.cmake
confonnx/: CMakeLists.txt
confonnx/client/: CMakeLists.txt
confonnx/client/python/: CMakeLists.txt  README.md  python.cc  setup.py
confonnx/client/python/confonnx/: client.py  colors.py  create_test_inputs.py  encrypt_model.py  get_model_info.py  hash_model.py  main.py  mapping.py  numpy_helper.py  predict_pb2.py
confonnx/protobuf/: CMakeLists.txt  predict.proto
confonnx/server/: CMakeLists.txt
confonnx/server/enclave/: CMakeLists.txt  enclave.cc  exceptions.h  key_vault_hsm_provider.cc  key_vault_hsm_provider.h  key_vault_provider.cc  key_vault_provider.h  props.cc  threading.cc
confonnx/server/enclave/core/: README  converter.cc  converter.h  environment.cc  environment.h  executor.cc  executor.h  onnx_protobuf.h  predict_protobuf.h  util.h
confonnx/server/enclave/core/serializing/: mem_buffer.h  tensorprotoutils.cc  tensorprotoutils.h
confonnx/server/host/: CMakeLists.txt  cancellable_timer.h  enclave.cc  enclave.h  enclave_error.cc  enclave_error.h  environment.cc  environment.h  json_handling.cc  json_handling.h  main.cc  request_handler.cc  request_handler.h  server_configuration.h  threading.cc
confonnx/server/host/core/: CMakeLists.txt  routes.cc  routes.h  session.cc
confonnx/server/shared/: CMakeLists.txt  ca_certificates.h  constants.h  curl_helper.cc  curl_helper.h  http_challenge.cc  http_challenge.h  key_vault_config.cc  key_vault_config.h  request_type.h  server.edl  status.h  util.cc  util.h
confonnx/test/: CMakeLists.txt  curl_tests.cc  key_vault_hsm_host_provider.cc  key_vault_hsm_host_provider.h  key_vault_hsm_tests.cc  key_vault_tests.cc  predict_request_tests.cc  requirements.txt  segfault_handler.h  tensorproto_diff.py  test_config.cc  test_config.h  test_key_vault_config.cc  test_key_vault_config.h  test_main.cc  test_system.py  utils.py
confonnx/test/helpers/: crypto_helpers.cc  crypto_helpers.h  env.cc  env.h  helpers.h  onnx_protobuf.h  pb_diff.cc  pb_diff.h  pb_loader.h  prettyprint.cc  prettyprint.h  protobuf_parsing_utils.cc  protobuf_parsing_utils.h  tensorproto_converter.cc  tensorproto_converter.h  tensorproto_util.cc  tensorproto_util.h
confonnx/test/test_enclave/: CMakeLists.txt  enclave.cc  props.cc  test.edl  threading.cc  threading.h  threading_host.cc
confonnx/tools/: CMakeLists.txt  encrypt_model.cc
docker/client/: Dockerfile.build  Dockerfile.manylinux.build  build.sh
docker/server/: Dockerfile.build  Dockerfile.run  build.sh  build_image.sh  run.sh
samples/k8s/: .gitignore  Chart.yaml  lets-encrypt.yaml  values-multi-node.yaml  values.yaml
samples/k8s/templates/: server.yaml
